@@ -8,11 +8,23 @@
 //   SDCCval.c:1073: expected SPECIFIER, got null-link
 volatile char a;
 
-void bug(void)
+void bug3166208(void)
 {
 	if ((* (char __xdata *)0xDF53))
 	{
 		a = 2;
+	}
+}
+
+// no need to call this, it generates compiler error:
+//   SDCCloop.c:339: expected symbol, got value
+unsigned char __data *p;
+
+void bug3150679(void)
+{
+	while(1)
+	{
+		*((unsigned char __data *)2) = *p;
 	}
 }
 
